add function merging results from elastic and neuro